<resources>
    <string name="app_name">SmartfarmOffline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_text">Welcome Text</string>
    <string name="email">Email</string>
    <string name="input_email">Please Input Your Email</string>
    <string name="password">Password</string>
    <string name="input_password">Please Input Your Password</string>
    <string name="login">LOGIN</string>
    <string name="Home">Home</string>
    <string name="discover">Discover</string>
    <string name="account">Account</string>
    <string name="search_hint">Search Your Rice</string>
    <string name="Input">Input</string>
    <string name="profile">Profile</string>

    <string name="data_beras">Data Beras</string>
    <string name="nama_beras">Nama Beras</string>
    <string name="jenis_beras">Jenis Beras</string>
    <string name="deskripsi_beras">Deskripsi Beras</string>
    <string name="jarak_penjual">Jarak Penjual</string>
    <string name="tahun_panen">Tahun Panen</string>
    <string name="nama_penjual">Nama Penjual</string>

    <string name="masukkan_nama_beras">Masukkan Nama Beras</string>
    <string name="masukkan_tahun_panen">Masukkan dalam bentuk tanggal</string>
    <string name="masukkan_deskripsi_beras">Masukkan deskripsi beras</string>
    <string name="masukkan_nama_penjual">Masukkan nama penjual</string>
    <string name="masukkan_alamat_penjual">Masukkan dalam satuan km</string>
    <string name="masukkan_jenis_beras">Masukkan Jenis Beras</string>

    <string name="simpan_data">Simpan</string>

    <string name="biodata_admin">Biodata Admin</string>

    <string name="logout">LOGOUT</string>
    <string name="harga_beras">Harga Beras</string>
    <string name="masukkan_harga_beras">Masukkan Harga Beras</string>
    <string name="titik_dua">:</string>
    <string name="putih">Putih</string>
    <string name="merah">Merah</string>
    <string name="hitam">Hitam</string>
    <string name="_2019"></string>
    <string name="Sebelum_2019"><![CDATA[< 2019]]></string>
    <string name="tahun_2019">2019</string>
    <string name="beras_putih">Beras Putih</string>
    <string name="beras_merah">Beras Merah</string>
    <string name="semua_beras">Semua Beras</string>
    <string name="beras_hitam">Beras Hitam</string>

    <array name="type">
        <item>Beras Putih</item>
        <item>Beras Merah</item>
        <item>Beras Hitam</item>
    </array>

    <array name="year">
        <item><![CDATA[< 2019]]></item>
        <item>2019</item>
    </array>
</resources>
