<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roun_rect_blue"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/img_login"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logoround"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <!--Email-->
        <TextView
            android:id="@+id/txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            />

        <!--Password-->
        <TextView
            android:id="@+id/txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:inputType="textCapWords"/>

        <!--Button Login-->
        <TextView
            android:id="@+id/fitur_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/roun_rect_yellow"/>

    </LinearLayout>

</RelativeLayout>