<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/person3" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.0"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    >

                    <!--Menampilkan nama beras-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/nama_beras"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:layout_marginEnd="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/name1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nama_beras"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <!--Menampilkan jenis-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/jenis_beras"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:layout_marginRight="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/type1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jenis_beras"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!--Menampilkan tahun-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tahun_panen"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:layout_marginEnd="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/year1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tahun_panen"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!--Menampilkan deskripsi-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi_beras"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:layout_marginRight="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/desc1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi_beras"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!--Menampilkan nama penjual-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/nama_penjual"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:layout_marginEnd="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/owner1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/nama_penjual"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!--Menampilkan alamat penjual-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/alamat_penjual"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:layout_marginEnd="5dp"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/owneradd1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/alamat_penjual"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>